@@ -2,6 +2,7 @@
 package Config::Model::Tk::Wizard ;
 
 use strict;
+our $VERSION="1.305";
 use warnings ;
 use Carp ;
 
