@@ -1,3 +1,8 @@
+2010-03-29  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* lib/Config/Model/Tk/*.pm: Put back VERSION number and bumped
+	them all to 1.305 to make CPAN indexer happy
+
 2010-03-27  Dominique Dumont  <domi.dumont@free.fr>
 
 	* Build.PL: depends on Pod::POM
