@@ -1,3 +1,8 @@
+2010-03-29  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* lib/Config/Model/*.pm: Put back VERSION number and bumped them
+	all to 1.201 to make CPAN indexer happy
+
 2010-03-28  Dominique Dumont  <domi.dumont@free.fr>
 
 	* Build.PL (process_tmpl_files): Build depends on
